--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Template Ext</title>
   </head>
   <body>
-    <div id="root" style="border: 5px solid blue; height: 600px; width: 400px; overflow: hidden;"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
