--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="manifest" href="/manifest.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Template Ext</title>
+    <title>DevMGMT</title>
   </head>
   <body>
     <div id="root"></div>
